# marques_bot

./: pyproject.toml
mackia_bot/: Dockerfile  bot.session  config.py  docker-compose.yml  main.py  requirements.txt
mackia_bot/handlers/plugins/: __init__.py  get_video.py
mackia_bot/handlers/tools/: clear.py  convert_size.py  convert_video.py  download_video.py  info_video.py  load_plugins.py
marques_bot/: config.py  main.py
marques_bot/bot/: commands.py  handlers.py
